2003-04-21  Bob Ippolito <bob@redivi.com>

	* twisted/web/static.py (File, DirectoryListing): DirectoryListing
	now gets the directory listing from File.listNames, and no longer
	calls os.listdir directly (unless a directory listing is not
	specified in the DirectoryListing constructor).

2003-04-19  Brian Warner  <warner@lothar.com>

	* twisted/trial/remote.py (JellyReporter.cleanResults): handle
	strings as testClass/method to unbreak tests

	* twisted/trial/remote.py (JellyReporter.reportResults): send only
	name of testClass/method to remote reporter, not whole class and
	method. Also add .taster hook to DecodeReport to let users specify
	their own security options.

2003-04-17  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4 Final.

2003-04-16  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4rc1.

2003-04-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* admin/accepttests, admin/accepttests.py: Acceptance tests
	turned into a Python module with no unguarded top-level code,
	to make running acceptance tests selectively possible.

2003-04-14  Brian Warner  <warner@lothar.com>

	* twisted/python/threadable.py (init):
	* twisted/spread/newjelly.py (SecurityOptions.allowBasicTypes):
	* twisted/spread/jelly.py (SecurityOptions.allowBasicTypes):
	Remove old apply() calls.

	* twisted/spread/flavors.py (Copyable.jellyFor): Use proper
	jellier .prepare/.preserve dance when .invoker is non-None. This
	fixes jellying of circular references when passed through PB
	connections.

	* twisted/test/test_newjelly.py: add test case that sets .invoker
	to verify that code path too

2003-04-14  Jonathan Lange  <jml@ids.org.au>

	* twisted/web/woven/controller.py (Controller): now, if getChild
	cannot find the requested child, it will ask getDynamicChild -- a
	method like getChild, but designed to be overriden by users.

2003-04-13  Bob Ippolito  <bob@redivi.com>

	* twisted/internet/app.py (DependentMultiService): a MultiService