@@ -1,3 +1,7 @@
+2003-04-21  Brian Warner  <warner@lothar.com>
+
+	* twisted/web/woven/*.py: add test-case-name tags
+
 2003-04-21  Bob Ippolito <bob@redivi.com>
 
 	* twisted/web/static.py (File, DirectoryListing): DirectoryListing
